--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1099,7 +1099,7 @@ p {
 
 .service-section .single-service .icon.color-2 {
   background: #E4E9FF;
-  background-image: url(../img/service/gera.JPG);
+  background-image: url(../img/service/gera.jpg);
   background-position: center;
   background-size: cover;
 }
