responsive web design changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -229,7 +229,7 @@ p {
 
 .scroll-top:hover {
   color: #fff;
-  background: rgba(78, 110, 241, 0.8);
+  background: rgb(165 237 241 / 80%);
 }
 
 @keyframes animation1 {
@@ -462,6 +462,7 @@ p {
 
 .navbar-toggler {
   padding: 0;
+  background-color: #0387d6;
 }
 
 .navbar-toggler:focus {
@@ -515,7 +516,15 @@ p {
   .navbar-nav .nav-item {
     margin-left: 20px;
   }
+
+  .nav-social-icons {
+    display: inline-flex;
+    flex-direction: row;
+    margin-left: 0px !important;
+  }
 }
+
+
 
 .navbar-nav .nav-item a {
   font-size: 18px;
@@ -874,7 +883,7 @@ p {
 
 @media (max-width: 767px) {
   .hero-section .hero-content {
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
   }
 }
 
@@ -909,7 +918,8 @@ p {
 
 @media (max-width: 767px) {
   .hero-section .hero-content h1 {
-    font-size: 36px;
+    font-size: 30px;
+    text-align: center;
   }
 }
 
@@ -1047,6 +1057,12 @@ p {
   font-weight:bold;
   max-width:600px;
   height:auto;
+}
+
+@media (max-width: 767px){
+  .service-section {
+    padding-top: 150px !important;
+  }
 }
 
 
