--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1115,7 +1115,7 @@ p {
 
 .service-section .single-service .icon.color-1 {
   background: #FFEFFF;
-  background-image: url(../img/service/mario.JPEG);
+  background-image: url(../img/service/chris.jpeg);
   background-position: center;
   background-size: cover;
 }
